<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" >

	    <TextView
	        android:id="@+id/text1"
	        android:layout_width="wrap_content"
	        android:layout_height="40dp"
	        android:layout_marginLeft="70dp"
	        android:text="@string/privacy_title"
	        android:textAppearance="?android:attr/textAppearanceLarge"
	        android:textSize="25sp"
	        android:textStyle="bold" />
	    
	     <TextView
	        android:id="@+id/text2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/privacy_info"
	        android:textSize="17sp"
	        android:textStyle="bold" />    
	    <TextView
	        android:id="@+id/text3"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textIsSelectable="false"/>
	    
	  	<TextView
	        android:id="@+id/text4"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/collection_information"
	        android:textSize="17sp"
	        android:textStyle="bold" />
	    
	    <TextView
	        android:id="@+id/text5"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textIsSelectable="false"/>
	    
	    <TextView
	        android:id="@+id/text6"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/how_to_collect"
	        android:textSize="17sp"
	        android:textStyle="bold" />
	    
	    <TextView
	        android:id="@+id/text7"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textIsSelectable="false"/>
	    
	    <TextView
	        android:id="@+id/text8"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/use_info"
	        android:textSize="17sp"
	        android:textStyle="bold" />
	    
	    <TextView
	        android:id="@+id/text9"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textIsSelectable="false"/>
	    
	    <TextView
	        android:id="@+id/text10"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/internal_marketing"
	        android:textSize="17sp"
	        android:textStyle="bold" />
	    
	    <TextView
	        android:id="@+id/text11"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textIsSelectable="false"/>
	    
	    <TextView
	        android:id="@+id/text12"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/sharing_info"
	        android:textSize="17sp"
	        android:textStyle="bold" />
	    
	    <TextView
	        android:id="@+id/text13"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textIsSelectable="false"/>
	    
	    <TextView
	        android:id="@+id/text14"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/ca_privacy"
	        android:textSize="17sp"
	        android:textStyle="bold" />
	    
	    <TextView
	        android:id="@+id/text15"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textIsSelectable="false"/>
	    
	     <TextView
	        android:id="@+id/text16"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/changes_policy"
	        android:textSize="17sp"
	        android:textStyle="bold" />
	    
	    <TextView
	        android:id="@+id/text17"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textIsSelectable="false"/>
	    
	</LinearLayout>
</ScrollView>