<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

	<LinearLayout
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content" 
	    android:orientation="vertical">

		<TextView
		    android:id="@+id/textView1"
		    android:layout_width="236dp"
		    android:layout_height="40dp"
		    android:layout_marginLeft="37dp"
		    android:text="@string/term_title"
		    android:textAppearance="?android:attr/textAppearanceLarge"
		    android:textSize="25sp"
		    android:textStyle="bold" />

	    <TextView
	        android:id="@+id/textView2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/ability_to_accept"
	        android:textSize="17sp"
	        android:textStyle="bold" />
	    
	    <TextView
	        android:id="@+id/textView3"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textIsSelectable="false"/>
	    
	    <TextView
	        android:id="@+id/textView4"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/agreement"
	        android:textSize="17sp"
	        android:textStyle="bold" />
	    
	    <TextView
	        android:id="@+id/textView5"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textIsSelectable="false"/>
	    
	     <TextView
	        android:id="@+id/textView6"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/use_site_content"
	        android:textSize="17sp"
	        android:textStyle="bold" />
	    
	    <TextView
	        android:id="@+id/textView7"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textIsSelectable="false"/>
	    
	    <TextView
	        android:id="@+id/textView8"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/condition_for_submission"
	        android:textSize="17sp"
	        android:textStyle="bold" />
	    
	    <TextView
	        android:id="@+id/textView9"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textIsSelectable="false"/>
	    
	    <TextView
	        android:id="@+id/textView10"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/posting_transmitting_content"
	        android:textSize="17sp"
	        android:textStyle="bold" />
	    
	    <TextView
	        android:id="@+id/textView11"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textIsSelectable="false"/>
	    <TextView
	        android:id="@+id/textView12"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/user_grant_license"
	        android:textSize="17sp"
	        android:textStyle="bold" />
	    
	    <TextView
	        android:id="@+id/textView13"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textIsSelectable="false"/>
	    <TextView
	        android:id="@+id/textView14"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/indemnity"
	        android:textSize="17sp"
	        android:textStyle="bold" />
	    
	    <TextView
	        android:id="@+id/textView15"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textIsSelectable="false"/>
	    
	    <TextView
	        android:id="@+id/textView16"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/legal_general"
	        android:textSize="17sp"
	        android:textStyle="bold" />	    
	    <TextView
	        android:id="@+id/textView17"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textIsSelectable="false"/>
    
    </LinearLayout>

</ScrollView>