<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top" >

    <EditText
        android:id="@+id/login_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="72dp"
        android:hint="@string/login_Username"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/login_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_username"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="54dp"
        android:hint="@string/login_Password"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/login_loginButt"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_below="@+id/login_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:onClick="signIn"
        android:text="@string/log_in" />
    
    <TextView
        android:id="@+id/loginError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/login_password"
        android:layout_alignRight="@+id/login_username"
        android:layout_below="@+id/login_loginButt"
        android:layout_marginTop="30dp"
        android:text="@string/log_in_error"
        android:textSize="15sp"
        android:textColor="#FF0000" />

    <TextView
        android:id="@+id/tv_forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginError"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:clickable="true"
        android:text="@string/forgotPassword" 
        android:textColor="#2B4F81"/>

</RelativeLayout>