<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@drawable/background_theme">

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView1"
        android:layout_alignParentRight="true"
        android:ems="10" 
		android:inputType="text"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="33dp"
        android:textSize="20sp"
        android:text="@string/type" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText1"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/editText1"
        android:layout_marginTop="28dp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="68dp"
        android:textSize="20sp"
        android:text="@string/location" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/spinner"
        android:layout_marginTop="25dp"
        android:textSize="20sp"
        android:text="@string/sort_by" />

    <Button
        android:id="@+id/explore"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/radioSort"
        android:layout_below="@+id/radioSort"
        android:layout_marginTop="22dp"
        android:background="@drawable/button_shape"
        android:text="@string/explore"/>

    <RadioGroup
        android:id="@+id/radioSort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="280dp"
        android:layout_alignLeft="@+id/spinner"
        android:layout_centerVertical="true" >

        <RadioButton
            android:id="@+id/rating_sort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:textSize="20sp"
            android:text="@string/sort_by_rating" />

        <RadioButton
            android:id="@+id/distance_sort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:textSize="20sp"
            android:text="@string/sort_by_distance" />
    </RadioGroup>
</RelativeLayout>