<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/beach_wallpaper"
    android:gravity="top" >

    <View
        android:id="@+id/view1"
        android:layout_width="275dp"
        android:layout_height="275dp"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="60dp"
        android:background="#FFFFFFFF" />

    <TextView
        android:id="@+id/welcome1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcome"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="10dp"
        android:text="@string/welcome1"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="250dp"
        android:layout_height="125dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:src="@drawable/idgoback_full" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:text="@string/welcome"
        android:textSize="20sp" />

    <Button
        android:id="@+id/logIn"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_alignBottom="@+id/view1"
        android:layout_alignRight="@+id/imageView1"
        android:layout_marginRight="14dp"
        android:onClick="logIn"
        android:text="@string/log_in" />

    <Button
        android:id="@+id/signUp"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_alignBottom="@+id/view1"
        android:layout_alignLeft="@+id/imageView1"
        android:layout_marginLeft="16dp"
        android:onClick="signUp"
        android:text="@string/sign_up" />
    
    <com.facebook.widget.LoginButton
        android:id="@+id/authButton"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@+id/signUp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" />
    
</RelativeLayout>